Made a lot of useful changes